@@ -639,6 +639,7 @@ wxOSX:
 - Fix wxSearchCtrl appearance under 10.10 (John Roberts).
 - Generate correct events for WXK_NUMPAD_ENTER (John Roberts).
 - Fix handling of WXK_NUMPAD_ENTER in wxTextCtrl (John Roberts).
+- Send wxIconizeEvent when a window is iconized/restore (Rob Krakora).
 - Fix printing all pages non-interactively (John Roberts).
 - Fix custom paper support (tijsv).
 - Return false from wxSound::Create()/IsOk() if the file doesn't exist.
